@@ -1,8 +1,8 @@
 package com.dfsek.terra.mod.util;
 
-import com.google.common.collect.ImmutableMap;
 import net.minecraft.registry.Registry;
 import net.minecraft.registry.entry.RegistryEntry;
+import net.minecraft.registry.tag.TagGroupLoader.RegistryTags;
 import net.minecraft.registry.tag.TagKey;
 import net.minecraft.registry.tag.WorldPresetTags;
 import net.minecraft.world.biome.Biome;
@@ -14,6 +14,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 
 public final class TagUtil {
@@ -24,12 +25,9 @@ public final class TagUtil {
     }
 
     private static <T> Map<TagKey<T>, List<RegistryEntry<T>>> tagsToMutableMap(Registry<T> registry) {
-        return registry
-            .streamTagsAndEntries()
-            .collect(HashMap::new,
-                (map, pair) ->
-                    map.put(pair.getFirst(), new ArrayList<>(pair.getSecond().stream().toList())),
-                HashMap::putAll);
+        return registry.streamTags().collect(HashMap::new,
+            (map, tag) -> map.put(tag.getTag(), tag.stream().collect(Collectors.toList())),
+            HashMap::putAll);
     }
 
     public static void registerWorldPresetTags(Registry<WorldPreset> registry) {
@@ -46,8 +44,14 @@ public final class TagUtil {
                         .add(preset),
                     () -> logger.error("Preset {} does not exist!", id)));
 
-        registry.clearTags();
-        registry.populateTags(ImmutableMap.copyOf(collect));
+        registry.startTagReload(new RegistryTags<>(registry.getKey(), collect)).apply();
+
+        if(logger.isDebugEnabled()) {
+            registry.streamEntries()
+                .map(e -> e.registryKey().getValue() + ": " +
+                          e.streamTags().reduce("", (s, t) -> t.id() + ", " + s, String::concat))
+                .forEach(logger::debug);
+        }
     }
 
     public static void registerBiomeTags(Registry<Biome> registry) {
@@ -90,8 +94,7 @@ public final class TagUtil {
                                         tb))),
                         () -> logger.error("No vanilla biome: {}", vb)));
 
-        registry.clearTags();
-        registry.populateTags(ImmutableMap.copyOf(collect));
+        registry.startTagReload(new RegistryTags<>(registry.getKey(), collect)).apply();
 
         if(logger.isDebugEnabled()) {
             registry.streamEntries()
